// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test <App /> render click to third tab 1`] = `
<App>
  <Tabs
    defaultFocus={false}
    defaultIndex={null}
    forceRenderTabPanel={false}
    selectedIndex={null}
  >
    <UncontrolledTabs
      className="react-tabs"
      focus={false}
      forceRenderTabPanel={false}
      onSelect={[Function]}
      selectedIndex={0}
    >
      <div
        className="react-tabs"
        data-tabs={true}
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <TabList
          className="react-tabs__tab-list"
          key=".0"
        >
          <ul
            className="react-tabs__tab-list"
            role="tablist"
          >
            <Tab
              className="react-tabs__tab"
              data-test-name="mario-tab"
              disabledClassName="react-tabs__tab--disabled"
              focus={false}
              id="react-tabs-10"
              key=".0"
              panelId="react-tabs-11"
              selected={true}
              selectedClassName="react-tabs__tab--selected"
              tabRef={[Function]}
            >
              <li
                aria-controls="react-tabs-11"
                aria-disabled="false"
                aria-selected="true"
                className="react-tabs__tab react-tabs__tab--selected"
                data-test-name="mario-tab"
                id="react-tabs-10"
                role="tab"
                tabIndex="0"
              >
                Mario
              </li>
            </Tab>
            <Tab
              className="react-tabs__tab"
              data-test-name="mario-tab"
              disabled={true}
              disabledClassName="react-tabs__tab--disabled"
              focus={false}
              id="react-tabs-12"
              key=".1"
              panelId="react-tabs-13"
              selected={false}
              selectedClassName="react-tabs__tab--selected"
              tabRef={[Function]}
            >
              <li
                aria-controls="react-tabs-13"
                aria-disabled="true"
                aria-selected="false"
                className="react-tabs__tab react-tabs__tab--disabled"
                data-test-name="mario-tab"
                id="react-tabs-12"
                role="tab"
                tabIndex={null}
              >
                Luigi
              </li>
            </Tab>
            <Tab
              className="react-tabs__tab"
              data-test-name="mario-tab"
              disabledClassName="react-tabs__tab--disabled"
              focus={false}
              id="react-tabs-14"
              key=".2"
              panelId="react-tabs-15"
              selected={false}
              selectedClassName="react-tabs__tab--selected"
              tabRef={[Function]}
            >
              <li
                aria-controls="react-tabs-15"
                aria-disabled="false"
                aria-selected="false"
                className="react-tabs__tab"
                data-test-name="mario-tab"
                id="react-tabs-14"
                role="tab"
                tabIndex={null}
              >
                Peach
              </li>
            </Tab>
            <Tab
              className="react-tabs__tab"
              data-test-name="mario-tab"
              disabledClassName="react-tabs__tab--disabled"
              focus={false}
              id="react-tabs-16"
              key=".3"
              panelId="react-tabs-17"
              selected={false}
              selectedClassName="react-tabs__tab--selected"
              tabRef={[Function]}
            >
              <li
                aria-controls="react-tabs-17"
                aria-disabled="false"
                aria-selected="false"
                className="react-tabs__tab"
                data-test-name="mario-tab"
                id="react-tabs-16"
                role="tab"
                tabIndex={null}
              >
                Yoshi
              </li>
            </Tab>
            <Tab
              className="react-tabs__tab"
              data-test-name="mario-tab"
              disabledClassName="react-tabs__tab--disabled"
              focus={false}
              id="react-tabs-18"
              key=".4"
              panelId="react-tabs-19"
              selected={false}
              selectedClassName="react-tabs__tab--selected"
              tabRef={[Function]}
            >
              <li
                aria-controls="react-tabs-19"
                aria-disabled="false"
                aria-selected="false"
                className="react-tabs__tab"
                data-test-name="mario-tab"
                id="react-tabs-18"
                role="tab"
                tabIndex={null}
              >
                Toad
              </li>
            </Tab>
          </ul>
        </TabList>
        <TabPanel
          className="react-tabs__tab-panel"
          forceRender={false}
          id="react-tabs-11"
          key=".1"
          selected={true}
          selectedClassName="react-tabs__tab-panel--selected"
          tabId="react-tabs-10"
        >
          <div
            aria-labelledby="react-tabs-10"
            className="react-tabs__tab-panel react-tabs__tab-panel--selected"
            id="react-tabs-11"
            role="tabpanel"
          >
            <p>
              <b>
                Mario
              </b>
               (
              <i>
                Japanese: マリオ Hepburn: Mario, [ma.ɾʲi.o]
              </i>
              ) (
              <i>
                English: /ˈmɑːrioʊ/; Italian: [ˈmaːrjo]
              </i>
              ) is a fictional character in the Mario video game franchise, owned by Nintendo and created by Japanese video game designer Shigeru Miyamoto. Serving as the company's mascot and the eponymous protagonist of the series, Mario has appeared in over 200 video games since his creation. Depicted as a short, pudgy, Italian plumber who resides in the Mushroom Kingdom, his adventures generally center upon rescuing Princess Peach from the Koopa villain Bowser. His younger brother and sidekick is Luigi.
            </p>
            <p>
              Source:
               
              <a
                href="https://en.wikipedia.org/wiki/Mario"
                target="_blank"
              >
                Wikipedia
              </a>
            </p>
          </div>
        </TabPanel>
        <TabPanel
          className="react-tabs__tab-panel"
          forceRender={false}
          id="react-tabs-13"
          key=".2"
          selected={false}
          selectedClassName="react-tabs__tab-panel--selected"
          tabId="react-tabs-12"
        >
          <div
            aria-labelledby="react-tabs-12"
            className="react-tabs__tab-panel"
            id="react-tabs-13"
            role="tabpanel"
          />
        </TabPanel>
        <TabPanel
          className="react-tabs__tab-panel"
          forceRender={false}
          id="react-tabs-15"
          key=".3"
          selected={false}
          selectedClassName="react-tabs__tab-panel--selected"
          tabId="react-tabs-14"
        >
          <div
            aria-labelledby="react-tabs-14"
            className="react-tabs__tab-panel"
            id="react-tabs-15"
            role="tabpanel"
          />
        </TabPanel>
        <TabPanel
          className="react-tabs__tab-panel"
          forceRender={false}
          id="react-tabs-17"
          key=".4"
          selected={false}
          selectedClassName="react-tabs__tab-panel--selected"
          tabId="react-tabs-16"
        >
          <div
            aria-labelledby="react-tabs-16"
            className="react-tabs__tab-panel"
            id="react-tabs-17"
            role="tabpanel"
          />
        </TabPanel>
        <TabPanel
          className="react-tabs__tab-panel"
          forceRender={false}
          id="react-tabs-19"
          key=".5"
          selected={false}
          selectedClassName="react-tabs__tab-panel--selected"
          tabId="react-tabs-18"
        >
          <div
            aria-labelledby="react-tabs-18"
            className="react-tabs__tab-panel"
            id="react-tabs-19"
            role="tabpanel"
          />
        </TabPanel>
      </div>
    </UncontrolledTabs>
  </Tabs>
</App>
`;

exports[`test <App /> render default tabs 1`] = `
<App>
  <Tabs
    defaultFocus={false}
    defaultIndex={null}
    forceRenderTabPanel={false}
    selectedIndex={null}
  >
    <UncontrolledTabs
      className="react-tabs"
      focus={false}
      forceRenderTabPanel={false}
      onSelect={[Function]}
      selectedIndex={0}
    >
      <div
        className="react-tabs"
        data-tabs={true}
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <TabList
          className="react-tabs__tab-list"
          key=".0"
        >
          <ul
            className="react-tabs__tab-list"
            role="tablist"
          >
            <Tab
              className="react-tabs__tab"
              data-test-name="mario-tab"
              disabledClassName="react-tabs__tab--disabled"
              focus={false}
              id="react-tabs-0"
              key=".0"
              panelId="react-tabs-1"
              selected={true}
              selectedClassName="react-tabs__tab--selected"
              tabRef={[Function]}
            >
              <li
                aria-controls="react-tabs-1"
                aria-disabled="false"
                aria-selected="true"
                className="react-tabs__tab react-tabs__tab--selected"
                data-test-name="mario-tab"
                id="react-tabs-0"
                role="tab"
                tabIndex="0"
              >
                Mario
              </li>
            </Tab>
            <Tab
              className="react-tabs__tab"
              data-test-name="mario-tab"
              disabled={true}
              disabledClassName="react-tabs__tab--disabled"
              focus={false}
              id="react-tabs-2"
              key=".1"
              panelId="react-tabs-3"
              selected={false}
              selectedClassName="react-tabs__tab--selected"
              tabRef={[Function]}
            >
              <li
                aria-controls="react-tabs-3"
                aria-disabled="true"
                aria-selected="false"
                className="react-tabs__tab react-tabs__tab--disabled"
                data-test-name="mario-tab"
                id="react-tabs-2"
                role="tab"
                tabIndex={null}
              >
                Luigi
              </li>
            </Tab>
            <Tab
              className="react-tabs__tab"
              data-test-name="mario-tab"
              disabledClassName="react-tabs__tab--disabled"
              focus={false}
              id="react-tabs-4"
              key=".2"
              panelId="react-tabs-5"
              selected={false}
              selectedClassName="react-tabs__tab--selected"
              tabRef={[Function]}
            >
              <li
                aria-controls="react-tabs-5"
                aria-disabled="false"
                aria-selected="false"
                className="react-tabs__tab"
                data-test-name="mario-tab"
                id="react-tabs-4"
                role="tab"
                tabIndex={null}
              >
                Peach
              </li>
            </Tab>
            <Tab
              className="react-tabs__tab"
              data-test-name="mario-tab"
              disabledClassName="react-tabs__tab--disabled"
              focus={false}
              id="react-tabs-6"
              key=".3"
              panelId="react-tabs-7"
              selected={false}
              selectedClassName="react-tabs__tab--selected"
              tabRef={[Function]}
            >
              <li
                aria-controls="react-tabs-7"
                aria-disabled="false"
                aria-selected="false"
                className="react-tabs__tab"
                data-test-name="mario-tab"
                id="react-tabs-6"
                role="tab"
                tabIndex={null}
              >
                Yoshi
              </li>
            </Tab>
            <Tab
              className="react-tabs__tab"
              data-test-name="mario-tab"
              disabledClassName="react-tabs__tab--disabled"
              focus={false}
              id="react-tabs-8"
              key=".4"
              panelId="react-tabs-9"
              selected={false}
              selectedClassName="react-tabs__tab--selected"
              tabRef={[Function]}
            >
              <li
                aria-controls="react-tabs-9"
                aria-disabled="false"
                aria-selected="false"
                className="react-tabs__tab"
                data-test-name="mario-tab"
                id="react-tabs-8"
                role="tab"
                tabIndex={null}
              >
                Toad
              </li>
            </Tab>
          </ul>
        </TabList>
        <TabPanel
          className="react-tabs__tab-panel"
          forceRender={false}
          id="react-tabs-1"
          key=".1"
          selected={true}
          selectedClassName="react-tabs__tab-panel--selected"
          tabId="react-tabs-0"
        >
          <div
            aria-labelledby="react-tabs-0"
            className="react-tabs__tab-panel react-tabs__tab-panel--selected"
            id="react-tabs-1"
            role="tabpanel"
          >
            <p>
              <b>
                Mario
              </b>
               (
              <i>
                Japanese: マリオ Hepburn: Mario, [ma.ɾʲi.o]
              </i>
              ) (
              <i>
                English: /ˈmɑːrioʊ/; Italian: [ˈmaːrjo]
              </i>
              ) is a fictional character in the Mario video game franchise, owned by Nintendo and created by Japanese video game designer Shigeru Miyamoto. Serving as the company's mascot and the eponymous protagonist of the series, Mario has appeared in over 200 video games since his creation. Depicted as a short, pudgy, Italian plumber who resides in the Mushroom Kingdom, his adventures generally center upon rescuing Princess Peach from the Koopa villain Bowser. His younger brother and sidekick is Luigi.
            </p>
            <p>
              Source:
               
              <a
                href="https://en.wikipedia.org/wiki/Mario"
                target="_blank"
              >
                Wikipedia
              </a>
            </p>
          </div>
        </TabPanel>
        <TabPanel
          className="react-tabs__tab-panel"
          forceRender={false}
          id="react-tabs-3"
          key=".2"
          selected={false}
          selectedClassName="react-tabs__tab-panel--selected"
          tabId="react-tabs-2"
        >
          <div
            aria-labelledby="react-tabs-2"
            className="react-tabs__tab-panel"
            id="react-tabs-3"
            role="tabpanel"
          />
        </TabPanel>
        <TabPanel
          className="react-tabs__tab-panel"
          forceRender={false}
          id="react-tabs-5"
          key=".3"
          selected={false}
          selectedClassName="react-tabs__tab-panel--selected"
          tabId="react-tabs-4"
        >
          <div
            aria-labelledby="react-tabs-4"
            className="react-tabs__tab-panel"
            id="react-tabs-5"
            role="tabpanel"
          />
        </TabPanel>
        <TabPanel
          className="react-tabs__tab-panel"
          forceRender={false}
          id="react-tabs-7"
          key=".4"
          selected={false}
          selectedClassName="react-tabs__tab-panel--selected"
          tabId="react-tabs-6"
        >
          <div
            aria-labelledby="react-tabs-6"
            className="react-tabs__tab-panel"
            id="react-tabs-7"
            role="tabpanel"
          />
        </TabPanel>
        <TabPanel
          className="react-tabs__tab-panel"
          forceRender={false}
          id="react-tabs-9"
          key=".5"
          selected={false}
          selectedClassName="react-tabs__tab-panel--selected"
          tabId="react-tabs-8"
        >
          <div
            aria-labelledby="react-tabs-8"
            className="react-tabs__tab-panel"
            id="react-tabs-9"
            role="tabpanel"
          />
        </TabPanel>
      </div>
    </UncontrolledTabs>
  </Tabs>
</App>
`;
